fixed #1. Tested on ubuntu 14

--- a/dcloud/ssh_base/Dockerfile
+++ b/dcloud/ssh_base/Dockerfile
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM centos:6.4
+FROM centos:centos6
 
 RUN echo root:changeme | chpasswd
 
