use dcloud as domain

--- a/dcloud/dns_base/Dockerfile
+++ b/dcloud/dns_base/Dockerfile
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM dcloud/ssh-base
+FROM dcloud/ssh-base:0.2
 
 RUN mkdir -p /etc/dcloud/dnsmasq
 
